<resources>
    <string name="app_name">MyApp</string>
    <string name="eventText">EVENTS</string>
    <string name="notesText">NOTES</string>
    <string name="budgetText">BUDGETS</string>
    <string name="runText">RUNS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="signIn">SignIn</string>
    <string name="signOut">SignOut</string>
    <string name="register">Register</string>
    <string name="verifyEmail">Verify</string>

    <string name="addnote">Add new note</string>
    <string name="addevent">Event Title</string>
    <string name="addbudget">New spending</string>
    <string name="addrun">Add new Run</string>


    <string name="ADD">Add</string>
    <string name="showOnMap">Show On Map</string>

    <string name="from">from</string>
    <string name="to">to</string>
    <string name="date">date</string>
    <string name="length">Length</string>

    <string name="amount">Amount</string>
    <string name="title_location_permission">Locatioooon</string>
    <string name="text_location_permission">Need location</string>
    <string name="ok">OK</string>

    <string name="dailyBudget">Your daily spendings</string>
    <string name="weeklyBudget">Your weekly spendings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
